# ITMO_RV

./: README.md  io.h  ipc.c  log.h  main.c
lab1/: CMakeLists.txt  main.c  task
lab2/: CMakeLists.txt  child.c  child.h  ipc.c  logwriter.c  main.c  parent.c  parent.h  task  var_lib.h
lab2/pa2/: CMakeLists.txt  ipc.c  logwriter.c  logwriter.h  main.c  parent.h  task
lab3/: CMakeLists.txt  child.c  child.h  ipc.c  main.c  parent.c  var_lib.h
lab4/: CMakeLists.txt  child.c  child.h  cs.c  io.h  ipc.c  lamport_time.c  lamport_time.h  main.c  queue.c  queue.h
pa4.1/: child.c  child.h  ipc.c  logwriter.c  logwriter.h  main.c  parent.c  parent.h  task  var_lib.h
